--- a/templates/blog/read.html.twig
+++ b/templates/blog/read.html.twig
@@ -56,7 +56,7 @@
                         <i id="addFavourite" data-recipe-name="{{ recipe.title }}" class="bi bi-suit-heart recipeList_favorite"></i>
                     {% endif %}
                 {% else %}
-                    <i id="addFavourite" data-recipe-name="{{ recipe.title }}" class="bi bi-suit-heart recipeList_favorite"></i>
+{#                    <i id="addFavourite" data-recipe-name="{{ recipe.title }}" class="bi bi-suit-heart recipeList_favorite"></i>#}
                 {% endif %}
 
 {#                {% if is_granted("ROLE_USER") %}#}
@@ -100,7 +100,7 @@
                     <br/>
                     <div class="col-lg-10 offset-lg-1">
                         <h3><i class="bi bi-hourglass-split"></i> Temps de préparation :</h3>
-                        <f>{{ recipe.preparationTime|format_datetime('none', 'short', locale='fr') }}</f>
+                        <p>{{ recipe.preparationTime|format_datetime('none', 'short', locale='fr') }}</p>
                     </div>
                 </div>
                 <br/>
@@ -108,7 +108,7 @@
                     <br/>
                     <div class="col-lg-10 offset-lg-1">
                         <h3><i class="bi bi-hourglass-split"></i> Temps de cuisson :</h3>
-                        <f>{{ recipe.cookingTime|format_datetime('none', 'short', locale='fr') }}</f>
+                        <p>{{ recipe.cookingTime|format_datetime('none', 'short', locale='fr') }}</p>
                     </div>
                 </div>
                 <br/>
@@ -117,7 +117,7 @@
                     <div class="col-lg-10 offset-lg-1">
                         <h3><i class="bi bi-cart3"></i> Listes des ingrédients :</h3>
                         {% for ingredient in ingredient %}
-                            <f> - {{ ingredient.proportion }} {{ ingredient.name }}</f>
+                            <p> - {{ ingredient.proportion }} {{ ingredient.name }}</p>
                         {% endfor %}
                     </div>
                 </div>
